Update 2 latest library versions