@@ -1,39 +1,41 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.1.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'org.springframework.boot' version '3.2.5'
+	id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'org.insaneheadoflettuce'
 version = '0.0.1-SNAPSHOT'
 
-sourceCompatibility = 14
-targetCompatibility = 14
-def commonArguments = '--enable-preview'
-
-tasks.withType(JavaCompile) { options.compilerArgs += commonArguments }
-tasks.withType(Test) { jvmArgs += commonArguments }
-tasks.withType(JavaExec) { jvmArgs += commonArguments }
+java {
+	sourceCompatibility = '21'
+	targetCompatibility = '21'
+}
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-	compile group: 'com.opencsv', name: 'opencsv', version: '5.2'
-	compile group: 'io.micrometer', name: 'micrometer-core', version: '1.5.2'
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-	compile group: 'commons-validator', name: 'commons-validator', version: '1.6'
+	// https://mvnrepository.com/artifact/com.google.guava/guava
+	implementation group: 'com.google.guava', name: 'guava', version: '33.1.0-jre'
+	// https://mvnrepository.com/artifact/com.opencsv/opencsv
+	implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
+	// https://mvnrepository.com/artifact/io.micrometer/micrometer-core
+	implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.12.5'
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+	// https://mvnrepository.com/artifact/commons-validator/commons-validator
+	implementation group: 'commons-validator', name: 'commons-validator', version: '1.8.0'
+	// https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core
+	implementation group: 'org.hibernate.orm', name: 'hibernate-core', version: '6.4.4.Final'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.h2database:h2'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-test {
+tasks.named('test') {
 	useJUnitPlatform()
 }
